refactor: 重构代码以提升可读性和维护性
- 简化集合初始化，使用构造器替代 addAll
- 移除未使用的导入语句
- 优化条件逻辑，使用 Math.min 替代 if 语句
- 修复类型转换问题，确保 Math.clamp 参数类型一致
- 改进空值检查，移除冗余的 null 判断
- 重构重复代码为独立方法，如 skipToVec 和 handleMissAction
- 优化字符串构建，使用 toString() 替代显式转换
- 简化布尔逻辑，使用更简洁的表达式
- 改进常量定义，提取魔法数字为命名常量
- 优化列表访问，使用 getFirst()/getLast() 替代索引访问
- 重构复杂条件链，提升代码可读性
- 添加 SuppressWarnings 注解消除警告
- 改进正则表达式使用，提升性能
- 优化 switch 语句，使用模式匹配
- 移除冗余注释和未使用的方法参数